# a2a_adapter

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
a2a_adapter/: __init__.py  adapter.py  card.py  cli.py  registry.py  router.py  server.py
a2a_adapter/api/: card_routes.py  task_routes.py
a2a_adapter/core/: __init__.py  lifecycle.py  rpc.py  skills.py
a2a_adapter/db/: __init__.py  registry.py
a2a_adapter/integrations/: __init__.py  crewai.py  langgraph.py  symphony.py
examples/: client_example.py  crewai_catalog.py  test_compliance.py
tests/: test_adapter.py  test_api.py  test_lifecycle.py
